@startuml ObserverPattern

skinparam Monochrome reverse
skinparam defaultFontName Aapex
skinparam defaultFontSize 16

title Observer pattern for representing different forms of numbers

class NumberSubject
{
  + NumberSubject()
  + void addObserver(Observer*)
  + void notifyAllObservers()
  + int getNumber()
  + setNumber(int)
  --
  - std::vector<Observer*> observers
  - int number
}

class Observer
{
  + {abstract} void update()
  --
  - NumberSubject*
}

class BinaryObserver
{
  + BinaryObserver(NumberSubject*)
  + void update()
}

class OctalObserver
{
  + OctalObserver(NumberSubject*)
  + void update()
}

class DecimalObserver
{
  + DecimalObserver(NumberSubject*)
  + void update()
}

class HexObserver
{
  + HexObserver(NumberSubject*)
  + void update()
}

Observer <|-- BinaryObserver
Observer <|-- OctalObserver
Observer <|-- DecimalObserver
Observer <|-- HexObserver
Observer o-- NumberSubject

@enduml

